<resources>
    <string name="app_name">AndroidFinalGroupProject</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="btn_to_ticket_master">TicketMaster</string>
    <string name="about_this_project">"FinalGroupProject "</string>
    <string name="audio_toast_message">Go to AudioSearch Page</string>
    <string name="mt_toast_message">Go to TicketMaster Page</string>
    <string name="covid19_toast_message">Go to Covid19 Page</string>
    <string name="btn_to_covid19">Covid19</string>
    <string name="ticket_master_activity_hint">ticket_master_activity_hint</string>
    <string name="tm_city_hint">city name</string>
    <string name="tm_radius_hint">radius</string>
    <string name="tm_search_btn">Search</string>
    <string name="tm_help_btn">Help</string>

    <string name="btn_to_recipe">Recipe</string>
    <string name="recipe_header">Welcome to Recipe Search</string>
    <string name="searchRecipeName">Enter the name of recipe to search</string>
    <string name="r_search_btn">Search</string>
    <string name="saveFavRecipe">Save to Favourite</string>

    <string name="tm_help_content">You can input the city and radius (a number ,for exampe, input 100 means the radius is 100 km) to search events nearby.
        If there is a yellow star before the event name, it means that you have added this event as your favorite events</string>
    <string name="tm_yes">Yse</string>
    <string name="tm_city_title">City Name</string>
    <string name="tm_city_name">City Name</string>
    <string name="tm_tx_start_date">Start Date</string>
    <string name="tm_tx_price_min">Price Min</string>
    <string name="tm_tx_price_max">Price Max</string>
    <string name="tm_tx_url">Url</string>
    <string name="tm_tx_image_url">Image Url</string>
    <string name="tm_favo_btn">Add Favorite</string>
    <string name="tm_remove_favo_btn">Remove Favorite</string>
    <string name="tm_detail_title">Event Info</string>
    <string name="tm_tx_event_name">Event Name</string>
    <string name="tm_favo_list_btn">Only Favorited</string>

    <!--    Audio Search Activity-->
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="audio_search">AudioSearch</string>
    <string name="btn_to_audio_search">AudioSearch</string>
    <string name="btn_search">search</string>
    <string name="load_albums">All albums loaded</string>
    <string name="title_favorite">Favorite List</string>
    <string name="title_album_page">Album Songs</string>
    <string name="title_delete">Delete </string>
    <string name="delete_message">Do you really want to delete this album from list?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="snackbar_message"> has added to favorite list.</string>
    <string name="toast_message">The album is already in favorite list</string>
    <string name="main_page">Main Page</string>
    <string name="search_page">Search Page</string>
    <string name="favorite_list">Favorite List</string>
    <string name="title_menu">Author: Yanan Cheng Version: 1.0</string>
    <string name="tm_snack_message_add">This event has been added to your favorite event list.</string>
    <string name="tm_snack_message_remove">This event has been rmoved from your favorite event list.</string>
    <string name="tm_title_menu">author:Weixin Wang.    version: 1.0</string>

    <string name="covid_toast_message">Author: Ziyin Yan.</string>
    <string name="btn_to_Covid19Case">"Covid-19  Case "</string>
    <string name="covid_caseText">"Covid-19  "</string>
    <string name="covid_search">Enter a country name and date(YYYY-MM-DD) for searching</string>
    <string name="covid_country_hint">Country</string>
    <string name="covid_date_hint">Date</string>

    <string name="covid_search_btn">Search</string>
    <string name="covid_save_btn">Add to Database</string>
    <string name="covid_help_text">Help</string>
    <string name="covid_help_content">Please input date in YYYY-MM-DD format, then click the search button to get the data.
              If you want to delete a record in the database, please press and hold the record to delete this record</string>
    <string name="covid_yes">Yes</string>

    <string name="covidopen">open</string>
    <string name="covidclose">close</string>
    <string name="covid_delete_msg">Do you want to delete it?</string>
    <string name="covid_delBtn">Yes</string>
    <string name="covid_undoBtn">No</string>
    <string name="delDBRec">Please Confirm it by clicking yes</string>

    <string name="covid_country">Country: </string>
    <string name="covid_countryCode">Country Code: </string>
    <string name="covid_province">Province: </string>
    <string name="covid_case">Case: </string>
    <string name="covid_date">Date: </string>
    <string name="covid_latitude">Latitude: </string>
    <string name="covid_longitude">Longitude: </string>

    <string name="choice1">Go to Main Page </string>
    <string name="choice2">"Database "</string>
    <string name="choice3">About</string>
    <string name="choice4">Help </string>

    <string name="covidtitle">Covid-19 Case Detail</string>
    <string name="covidauthor">Author: Ziyin Yan</string>
    <string name="covidversion">Version No.: 1.0 </string>
    <string name="recipe_toast_message">Go to Recipe</string>
    <string name="r_hide_button">Hide</string>
    <string name="r_search_keyword">Enter a name or an ingredient</string>
    <string name="r_author">Author: Jingshan Guan. Version: 1.0</string>
    <string name="r_my_fav_btn">My favourite recipe</string>
    <string name="r_gobacktoStartpage">Main Page</string>

    <string name="covid_switch_message">Record saved</string>
    <string name="covid_undo">UNDO</string>
    <string name="covid_switch_message1">Record not saved</string>

    <string name="r_result_title">Title</string>
    <string name="r_result_ingredient">Ingredients</string>
    <string name="r_result_url">URL</string>
    <string name="r_save_string">SAVE</string>
    <string name="r_delete">DELETE</string>
    <string name="r_help">HELP</string>
    <string name="r_help_content">Welcome to Recipe Search! You can enter a name or ingredient to search for the recipes. You can save your favourite recipes and delete recipe from your favourites.</string>
    <string name="r_OK">OK</string>

    <string name="r_recipe_loaded">Recipe loaded</string>
    <string name="r_details">Recipe details</string>
    <string name="r_fav_added">recipe added to favourite</string>
    <string name="r_fave_deleted">recipe deleted from favourtie</string>
    <string name="r_delete_alert">Recipe will be deleted,  still proceed?</string>
    <string name="r_fav_duplicate">Recipe already added to favourite</string>
    <string name="r_fav_title">Favourite recipes</string>
    <string name="r_fav_click_button">Save to favourite</string>
    <string name="r_recipe_loading">Loading recipe</string>

    <string name="covid_title">COVID-19 Detail</string>
    <string name="r_already_saved">Recipe already saved in favourite</string>
    <string name="hide">hide</string>
    <string name="help">Help</string>
    <string name="hdisplay1">\"Audio Search \"</string>
    <string name="hdisplay2">This app will help you search singer</string>
    <string name="hdispaly3">And you could save your favorite album</string>
    <string name="hdisplay4">Created by Yanan Cheng</string>
    <string name="hdisplay5">Close</string>


</resources>