<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/recipe_help"
        android:title="@string/r_help"

        android:orderInCategory="25"
        app:showAsAction="always"/>

    <item
        android:id="@+id/search"
        android:icon="@drawable/recipeicon"
        android:orderInCategory="50"
        android:title="@string/r_search_btn"
        app:showAsAction="never" />


    <item android:id="@+id/r_menu_fav_btn"
        android:title="@string/r_fav_click_button"
        android:orderInCategory="75"
        android:icon="@drawable/recipe_fav"
        app:showAsAction="always" />


    <item
        android:id="@+id/main_page"
        android:icon="@drawable/mainpage"
        android:orderInCategory="100"
        android:title="@string/r_gobacktoStartpage"
        app:showAsAction="ifRoom" />



</menu>