<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tm_background"

    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#303F9F"
        app:title="@string/tm_detail_title"
        app:titleTextColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:text="@string/tm_tx_event_name"
            android:textColor="#FFFFFF"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tm_event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            android:textAlignment="textStart"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tm_tx_start_date"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/tm_tx_start_date"
            android:textColor="#FFFFFF"/>
        <TextView
            android:id="@+id/tm_event_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#FFFFFF"
            android:textAlignment="textStart"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/tm_tx_price_min"
            android:textSize="16dp"
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/tm_tw_price_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="#FFFFFF"
            android:textAlignment="textStart"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/tm_tx_price_max"
            android:textSize="16dp"

            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/tm_tw_price_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"

            android:textAlignment="textStart"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/tm_tx_url"
            android:textSize="16dp"

            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/tm_tw_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
android:autoLink="all"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/tm_tx_image_url"
            android:textSize="16dp"

            android:textColor="#FFFFFF"/>

        <ImageView
            android:id="@+id/tm_tw_image_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"

            android:textAlignment="textStart"
            android:textColor="#FFFFFF"/>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"

            />
    </LinearLayout>





    <Button
        android:id="@+id/tm_add_favorite_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tm_favo_btn" />

    <Button
        android:id="@+id/tm_remove_from_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tm_remove_favo_btn" />

</LinearLayout>