<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#303F9F"
        app:title="@string/app_name"
        app:titleTextColor="#FFFFFF"/>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/btn_to_master_ticket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_to_ticket_master" />

            <Button
                android:id="@+id/btn_to_covid19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_to_covid19" />


            <Button
                android:id="@+id/btn_to_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_to_recipe" />

            <Button
                android:id="@+id/btn_to_audio_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_to_audio_search" />


        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#303F9F"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/header_for_all"
            app:itemTextColor="#FFFFFF"
            app:menu="@menu/main_toolbar" />
    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>