<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".masterticket.TicketMasterActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#303F9F"
        app:title="@string/btn_to_ticket_master"
        app:titleTextColor="#FFFFFF"/>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start"
        >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/tm_background"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progress_horizontal"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/hint_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ticket_master_activity_hint"
                android:textColor="#FFFFFF"
                android:textSize="20dp"/>


            <LinearLayout
                android:id="@+id/search_div"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/tm_city_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/tm_city_hint"
                    android:backgroundTint="@android:color/white"
                    android:textColor="#FAFDFD"
                    android:textColorHint="#FAFDFD"/>

                <EditText
                    android:id="@+id/tm_radius_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/tm_radius_hint"
                    android:backgroundTint="@android:color/white"
                    android:textColor="#FAFDFD"
                    android:textColorHint="#FAFDFD"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/tm_divider"
                android:showDividers="middle"
                android:dividerPadding="1dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/search_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tm_search_btn" />

                <Button
                    android:id="@+id/favorite_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tm_favo_list_btn" />

                <Button
                    android:id="@+id/help_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tm_help_btn" />

            </LinearLayout>


            <ListView
                android:id="@+id/event_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#303F9F"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/header_for_all"
            app:itemTextColor="#FFFFFF"
            app:menu="@menu/main_toolbar" />
    </androidx.drawerlayout.widget.DrawerLayout>
</LinearLayout>